improved database connection
